Fixed bug where div wrapper prevented todo animation because its overflow wasn't set to hidden. Misc changes in attempt to do the auto height approach

--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -3,35 +3,40 @@
 .todo {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .appear {
   height: 0;
-  visibility: hidden;
+  overflow: hidden;
 }
 
 .appearActive {
   height: var(--global-todo-height);
   transition: all var(--global-transition-time);
-  visibility: hidden;
+  overflow: hidden;
 }
 
 .enter {
   height: 0;
+  overflow: hidden;
 }
 
 .enterActive {
   height: var(--global-todo-height);
   transition: all var(--global-transition-time);
+  overflow: hidden;
 }
 
 .exit {
   height: var(--global-todo-height);
+  overflow: hidden;
 }
 
 .exitActive {
   height: 0;
   transition: all var(--global-transition-time);
+  overflow: hidden;
 }
 
 enter.phantom {
